FIX: Twitter Bootstrap Responsive Navbar Broken on Small Screens

--- a/django_admin_bootstrapped/static/admin/css/overrides.css
+++ b/django_admin_bootstrapped/static/admin/css/overrides.css
@@ -4,72 +4,6 @@ a:active,
 a:focus {
     outline: none;
 }
-body {
-    padding-top: 60px;
-    padding-bottom: 40px;
-}
-@media (max-width: 980) {
-    body {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    /*
-    th, td {
-        margin: 0;
-        vertical-align: top;
-    }
-    th {
-        text-align: left;
-    }
-    table {
-        display: block;
-        position: relative;
-        width: 100%;
-    }
-    thead {
-        display: block;
-        float: left;
-    }
-    tbody {
-        display: block;
-        overflow-x: auto;
-        position: relative;
-        white-space: nowrap;
-        width: auto;
-    }
-    thead tr {
-        display: block;
-    }
-    th {
-        display: block;
-        text-align: right;
-    }
-    tbody tr {
-        display: inline-block;
-        vertical-align: top;
-    }
-    td {
-        display: block;
-        min-height: 1.25em;
-        text-align: left;
-    }
-    th {
-        border-bottom: 0 none;
-        border-left: 0 none;
-    }
-    td {
-        border-bottom: 0 none;
-        border-left: 0 none;
-        border-right: 0 none;
-    }
-    tbody tr {
-        border-left: 1px solid #BABCBF;
-    }
-    th:last-child, td:last-child {
-        border-bottom: 1px solid #BABCBF;
-    }
-    */
-}
 .sidebar-nav {
     padding: 9px 0;
 }
